# WolfEngine

./: .deepsource.toml  .dockerignore  .env.sample  .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGE_LOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Coverage.sh  Cross.toml  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  TODO.md  Version History.txt  android.sh  appveyor.yml  appveyor_pyWolf.yml  appveyor_vulkan.yml  build.rs  build.sh  clippy.bat  clippy.sh  clippy.toml  coverage.bat  deny.toml  install copy.sh  install.cmd  install.sh  manifest.manifest  n.txt  (+6 more)
engine/src/wolf.content_pipeline/: CMakeLists.txt  dllmain.cpp  w_bounding.cpp  w_bounding.h  w_camera.cpp  w_camera.h  w_content_manager.cpp  w_content_manager.h  w_cpipeline_dll.h  w_cpipeline_export.h  w_cpipeline_model.cpp  w_cpipeline_model.h  w_cpipeline_pch.cpp  w_cpipeline_pch.h  w_cpipeline_scene.cpp  w_cpipeline_scene.h  w_cpipeline_structs.h  w_math.h  w_model.cpp  w_model.h  w_scene.cpp  w_scene.h  w_vertex_declaration.h  w_vertex_struct.h
engine/src/wolf.media/: CMakeLists.txt  w_media.c  w_media.h
engine/src/wolf.system/: CMakeLists.txt  apu.h  convey.c  dllmain.cpp  glm_extension.h  glm_extention.h  stb_image.h  stb_image_write.h  w_Ireleasable.h  w_aligned_malloc.cpp  w_aligned_malloc.h  w_allocator.h  w_boost_python_helper.h  w_bounding.cpp  w_bounding.h  w_bounding_py.h  w_color.h  w_color_py.h  w_compress.c  w_compress.cpp  w_compress.h  w_compress.hpp  w_compress_data_type.h  w_compress_lz4.c  w_compress_lz4.h  w_compress_lzma.cpp  w_compress_lzma.h  w_compress_old.c  w_concurrent_queue.h  w_convert.h  w_cpu.cpp  w_cpu.h  w_event.h  w_game_time.h  w_game_time_py.h  w_image.cpp  w_image.h  w_input.h  w_inputs_manager.cpp  w_inputs_manager.h  (+60 more)
run-wasm/: Cargo.toml  README.md
src/wolf.system/: CMakeLists.txt  apr.sh  dllmain.cpp  expat.sh  test.cpp  wolf.c  wolf.h
src/wolf.system/base64/: fastavx512bwbase64.c  fastavx512bwbase64.h  linuxbase64.h  quicktimebase64.c  scalarbase64.c  version.txt
src/wolf.system/chrono/: w_gametime.h  w_timespan.c
src/wolf.system/cmake/: WolfSystemConfig.cmake.in  external.cmake
src/wolf.system/compression/: w_compress.c  w_compress.h
src/wolf.system/concurrency/: w_async.c  w_async.h  w_atomic.c  w_atomic.h  w_condition_variable.c  w_condition_variable.h  w_mutex.c  w_mutex.h  w_sigslot.c  w_thread.c  w_thread.h  w_thread_pool.c  w_thread_pool.h  w_timer.c  w_timer.h
src/wolf.system/db/: w_cassandra.h
src/wolf.system/fiber/: w_fiber.cpp  w_fiber.h  w_fiber.hpp
src/wolf.system/io/: w_io.c  w_io.h
src/wolf.system/log/: logger.cpp  w_log.cpp  w_log.h
src/wolf.system/memory/: w_array.c  w_hash.c  w_hash.h  w_mem_map.c  w_shared_mem.c  w_string.c  w_table.c
src/wolf.system/net/: w_net.c  w_net.h  w_url.cpp
src/wolf.system/os/: w_cpu.h  w_platform.h  w_process.c  w_window.c  w_window.h
src/wolf.system/script/: w_lua.c  w_lua.h  w_python.cpp  w_python.h
src/wolf.system/shell/: amq.sh  apr.sh
src/wolf.system/w_base64/: fastavx512bwbase64.c  fastavx512bwbase64.h  klompavxbase64.c  linuxbase64.h  neonbase64.cc
src/wolf.system/w_chrono/: test.hpp  w_chrono.c  w_gametime.c  w_timespan.c  w_timespan.h
src/wolf.system/w_compression/: test.hpp  (+2 more)
wolf/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  DISABLE_ANALYSIS_BEGIN  DISABLE_ANALYSIS_END  README.md  build.rs  coverage.bat  cpp.hpp  cpp.ruleset  dllmain.cpp  encoded_buffer.svt1  gtest.hpp  tests.cpp  wolf.cpp  wolf.cppcheck  wolf.hpp
wolf-demo/: Cargo.toml  README.md  build-wasm.bat  run-wasm.bat
wolf-demo/src/: lib.rs  main.rs
wolf-demo/wasm/: build-wasm.bat  build-wasm.sh  run-wasm-ssl.bat  run-wasm.sh  ssl_server.py
wolf-demo/www/: index.html  run-wasm.js  start-app.js
wolf-stream/: Cargo.toml  README.md  build.rs
wolf-stream/src/: lib.rs
wolf-system/: Cargo.toml  README.md  build.rs
wolf-system/proto/: raft.proto
wolf-system/src/: lib.rs
wolf/c-api/: tests.cpp  w_leak_detector.cpp  w_leak_detector.hpp  wolf.h
wolf/cc/: .clang-tidy  CMakeLists.txt  dllmain.cpp  wolf.cpp  wolf.h
wolf/cmake/: boost.cmake  fetch_boost_asio.cmake  fetch_boost_basics.cmake  fetch_boost_fiber.cmake  fetch_boost_pool.cmake  machine_learning.cmake  media.cmake  ml.cmake  rust.cmake  stream.cmake  system.cmake  vcpkg.cmake
wolf/cxx/: .clang-tidy  CMakeLists.txt  Wolf.cpp  Wolf.hpp
wolf/examples/: hello.rs  hello_wolf.rs
wolf/media/: w_image.cpp  w_image.hpp  w_image_data.cpp  w_image_data.hpp  w_openal.cpp  w_openal.hpp
wolf/ml/: w_common.cpp  w_common.hpp
wolf/protos/: hello.proto  raft.proto
wolf/rust/: Cargo.toml  build.rs
wolf/src/: error.rs  lib.rs
wolf/stream/: tests.hpp
wolf/sys/: .clang-tidy  .gitignore  CMakeLists.txt  common.hpp  dllmain.cpp  test.cpp  w_platform.h  wolf.c  wolf.cpp  wolf.h  wolf.ruleset
wolf/system/: getopt.h  invocable.h  test.hpp  tests.hpp  w_flags.hpp  w_gametime.cpp  w_gametime.hpp  w_leak_detector.cpp  w_leak_detector.hpp  w_overloaded.hpp  w_process.cpp  w_process.hpp  w_ring_buffer_spsc.hpp  w_sig_slot.hpp  w_spsc_ring_buffer.hpp  w_task.hpp  w_time.cpp  w_time.hpp  w_timer.hpp  w_trace.hpp
wolf/tests/: chrono.rs  compression.rs  ffi.rs  ffmpeg_encode.rs  media_audio.rs  media_av_frame.rs  media_ffmpeg.rs  media_openal.rs  os.rs  script.rs  stream_rist.rs  system_algorithm.rs  system_chrono.rs  system_compression.rs  system_gamepad.rs  system_os.rs  system_quic.rs  system_script.rs  system_socket_udp.rs  udp_client.py
wolf_build/: Cargo.toml
wolf_build/src/: build.rs  lib.rs
wolf_deps/luajit/: Cargo.toml  build.rs
wolf_deps/lz4/: Cargo.toml  build.rs
wolf_macros/: Cargo.toml
wolf_macros/src/: lib.rs
wolf_render/: Cargo.toml
wolf_render/examples/: hello.rs
wolf_render/src/: lib.rs
wolf_stream/: .gitignore  Cargo.toml  README.md  build.rs  command.bat
wolf_stream/src/: lib.rs
wolf_system/: Cargo.toml  README.md  build.rs
wolf_system/src/: lib.rs
wolfengine/: Cargo.toml  README.md
wolfengine/src/: lib.rs
(+4071 files in other folders)
