[workspace]
members = [
  "wolf-system",
  "wolf-stream",
  "wolf-render",
]

# for more optimization https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
rpath = false
split-debuginfo = "unpacked"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
# panic = "unwind" # This setting is always ignored.
rpath = false
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
split-debuginfo = 'off'

[profile.bench]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = "z"
overflow-checks = false
#panic = "abort" # This setting is always ignored.
rpath = false
split-debuginfo = 'off'
