# [[bench]]

# [[bin]]

# [[example]]

# [[test]]

# [badges]

# [build-dependencies]

# [dependencies]

# [dev-dependencies]

# [features]

# [package]

[profile.bench]
codegen-units = 256
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 0
overflow-checks = false
panic = "unwind"
rpath = false
split-debuginfo = "off"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
rpath = false
split-debuginfo = "packed"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
rpath = false
split-debuginfo = "packed"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
split-debuginfo = "off"

# [patch]

# [replace]

[workspace]
members = [
  "wolf_system",
  "wolf_stream",
  "wolf_render"
]
