[package]
authors = ["Lucas Kent <rubickent@gmail.com>"]
categories = ["wasm"]
description = "Trivially run wasm applications and examples in the browser"
edition = "2021"
keywords = ["cargo", "run", "wasm", "serve", "wasm-bindgen"]
license = "MIT OR Apache-2.0"
name = "run-wasm"
readme = "README.md"
repository = "https://github.com/rukai/cargo-run-wasm"
version = "0.1.1"

[dependencies]
cargo-run-wasm = "0.1.1"
