[package]
categories = ["game-development", "game-engines", "games", "graphics", "multimedia", "wasm", "concurrency"]
description = "Wolf is a set of modules for realtime rendering, realtime streaming and game developing"
edition = "2021"
keywords = ["gamedev", "system", "gamedev", "render", "wasm", "web", "worker"]
license = "Apache-2.0"
name = "wolf-demo"
readme = "README.md"
repository = "https://github.com/WolfEngine/WolfEngine/"
version = "3.0.3"

# remove the following for native local debugging
[lib] 
name = "wolf_demo"
path = "src/main.rs"
crate-type = ["cdylib"]

[[bin]]
name = "wolf_demo"
path = "src/main.rs"

[dependencies]
anyhow = {version = "1.0.62", default-features = false}
raw-window-handle = {version = "0.4.3", default-features = false, features = ["alloc"]} 
winit = {version = "0.27.2", default-features = false, features = ["x11", "wayland", "wayland-dlopen"]}
wolfengine = { path = "../wolf", version = "3.0.2", default-features = false, features= ["system_script", "render"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", default-features = false }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde_closure = { version = "0.3.2", default-features = false }
wasm-bindgen = { version = "0.2.82", default-features = false }
wasm-mt = {version = "0.1.2", default-features = false }
web-sys = {version = "0.3.59", default-features = false, features = ['console'] }
wgpu = {version = "0.13.1", default-features = false, features = ["webgl"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.20.1", default-features = false, features= ["rt-multi-thread"]}
wgpu = {version = "0.13.1", default-features = false}
