[package]
categories = ["game-development", "game-engines", "games", "graphics", "multimedia", "wasm", "concurrency"]
description = "Wolf is a set of modules for realtime rendering, realtime streaming and game developing"
edition = "2021"
keywords = ["gamedev", "system", "gamedev", "render", "wasm", "web", "worker"]
license = "Apache-2.0"
name = "wolf-demo"
readme = "README.md"
repository = "https://github.com/WolfEngine/WolfEngine/"
version = "3.0.3"

# remove the following for native local debugging
[lib] 
name = "wolf_demo"
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

#[[bin]]
# name = "wolf_demo"
# path = "src/main.rs"

[dependencies]
anyhow = {version = "1.0.69", default-features = false}
#raw-window-handle = {version = "0.5.0", default-features = false, features = ["alloc"]} 
#winit = {version = "0.28.1", default-features = false, features = ["x11", "wayland", "wayland-dlopen"]}
wolfengine = { path = "../wolf", version = "3.0.2", default-features = false, features= ["stream_janus"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", default-features = false }
#serde = { version = "1.0.152", default-features = false, features = ["derive"] }
wasm-bindgen = { version = "0.2.84"}
web-sys = {version = "0.3.61", default-features = false, features = ['console'] }
#wgpu = {version = "0.15.1", default-features = false, features = ["webgl"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.25.0", default-features = false, features= ["rt-multi-thread"]}
#wgpu = {version = "0.15.1", default-features = false}