[package]
author = "Pooya Eimandar"
edition = "2021"
name = "wolf-stream"
version = "3.0.0"

[lib]
crate-type = ["rlib"]
name = "wolf_stream"
path = "src/lib.rs"

[dependencies]
# before adding any dependency please check it out from
# https://android.googlesource.com/platform/external/rust/crates/
mimalloc = {version = "0.1.26"}

[build-dependencies]

[features]
default = []
