[package]
author = "Pooya Eimandar"
edition = "2021"
name = "wolf-stream"
version = "3.0.0"

[lib]
crate-type = ["rlib"]
name = "wolf_stream"
path = "src/lib.rs"

[dependencies]
# before adding any dependency please check it out from
# https://android.googlesource.com/platform/external/rust/crates/
anyhow = {version = "1.0.48"}
gstreamer-rtsp = {version = "0.17.0"}
gstreamer-rtsp-server = {version = "0.17.2"}
mimalloc = {version = "0.1.26"}
tokio = {version = "1.14.0", features = ["rt-multi-thread", "macros"]}

[build-dependencies]

[features]
default = []
