[package]
author = "Pooya Eimandar"
edition = "2021"
name = "wolf-stream"
version = "3.0.0"

[lib]
crate-type = ["rlib"]
name = "wolf_stream"
path = "src/lib.rs"

[dependencies]
# before adding any dependency please check it out from
# https://android.googlesource.com/platform/external/rust/crates/
anyhow = {version = "1.0.48"}
cxx = {version = "1.0.56"}
gstreamer-rtsp = {version = "0.17.0"}
gstreamer-rtsp-server = {version = "0.17.2"}
mimalloc = {version = "0.1.27"}
tokio = {version = "1.14.0", features = ["rt-multi-thread", "macros"]}

[build-dependencies]
cxx-build = {version = "1.0.56"}
git2 = {version = "0.13.24"}
plist = {version = "1.3.1"}
run_script = {version = "0.9.0"}

[features]
default = []
