[package]
author = "Pooya Eimandar"
edition = "2021"
name = "wolf-system"
version = "3.0.0"

[lib]
crate-type = ["rlib"]
name = "wolf_system"
path = "src/lib.rs"

[dependencies]
# before adding any dependency please check it out from  
# https://android.googlesource.com/platform/external/rust/crates/
anyhow = {version = "1.0.45"}
cxx = {version = "1.0.56"}
futures = {version = "0.3.17"}
lazy_static = {version = "1.4.0"}
mimalloc = {version = "0.1.27"}
rustls-pemfile = {version = "0.2.1"}
sysinfo = {version = "0.21.1", default-features = false}
tokio = {version = "1.14.0", features = ["full"]}
tokio-rustls = {version = "0.23.1"}
tokio-stream = {version = "0.1.8"}
tokio-tungstenite = {version = "0.16.0", features = ["rustls"]}
webpki-roots = {version = "0.22.1"}

[build-dependencies]
cxx-build = {version = "1.0.56"}
git2 = {version = "0.13.24"}
plist = "1.3.1"

[features]
default = ["lua"]
lua = []
